Updated Bower package name

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "d3-radial",
+  "name": "d3-radial-progress",
   "version": "1.0.0",
   "homepage": "http://www.brightpointinc.com/clients/brightpointinc.com/library/radialProgress/index.html",
   "authors": [
