--- a/bower.json
+++ b/bower.json
@@ -1,14 +1,14 @@
 {
   "name": "d3-radial-progress",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "homepage": "http://www.brightpointinc.com/clients/brightpointinc.com/library/radialProgress/index.html",
   "authors": [
     "BrightPoint Consulting, Inc."
   ],
   "description": "A lightweight HTML5 radial progress component, using a function-chaining API.",
   "main": [
-    "scripts/radialProgress.js",
-    "styles/style.css"
+    "dist/radialProgress.js",
+    "dist/radialProgress.css"
   ],
   "keywords": [
     "D3"
@@ -16,6 +16,5 @@
   "license": "MIT",
   "dependencies": {
     "d3": "~3"
-  },
-  "devDependencies": {}
+  }
 }
